project/impl/ws/web-server-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: centodiciotto-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: centodiciotto-ws
            port:
              number: 80
